fix: restore fixed height on results panel with scrollbar

--- a/css/theme.css
+++ b/css/theme.css
@@ -253,7 +253,7 @@ button:hover {
 }
 
 .results-container {
-    min-height: 700px;
+    height: 700px;
     display: flex;
     flex-direction: column;
 }
